--- a/app.html
+++ b/app.html
@@ -1,1 +1,15 @@
-gitkeep
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <title>FamHealth Hub</title>
+  <link rel="stylesheet" href="assets/css/global.css">
+  <link rel="stylesheet" href="assets/css/app.css">
+</head>
+<body>
+  <h1 style="color:white; text-align:center; margin-top: 10rem;">
+    Willkommen, Doc! Du bist drin.
+  </h1>
+  <p style="text-align:center;">Phase 2 (Dashboard + Sidebar) kommt in 5 Minuten...</p>
+</body>
+</html>
