--- a/index.html
+++ b/index.html
@@ -1,35 +1,51 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="de" data-theme="dark">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FamHealth Hub – Login</title>
+  <title>FamHealth Hub</title>
   <link rel="stylesheet" href="assets/css/global.css">
   <link rel="stylesheet" href="assets/css/login.css">
   <link rel="manifest" href="manifest.json">
 </head>
 <body class="login-body">
+
+  <!-- Theme Toggle -->
+  <div class="theme-toggle" onclick="toggleTheme()">
+    <div class="slider"></div>
+    <span class="sun">Sun</span>
+    <span class="moon">Moon</span>
+  </div>
+
   <div class="login-container">
     <div class="login-card">
       <h1>FamHealth Hub</h1>
-      <p class="subtitle">Internes Arztcockpit</p>
+      <p class="subtitle">Dein internes Arztcockpit</p>
 
-      <div id="pin-login">
-        <p>PIN eingeben (Standard: 200211)</p>
-        <input type="password" id="pin-input" maxlength="6" inputmode="numeric" placeholder="••••••" autofocus>
-        <button id="login-btn">Entsperren</button>
-        <p id="error-msg" class="error"></p>
-      </div>
+      <input type="password" id="pin-input" maxlength="6" inputmode="numeric" 
+             placeholder="••••••" autofocus autocomplete="off">
+      <button id="login-btn">Entsperren →</button>
+      <p class="error" id="error-msg"></p>
     </div>
   </div>
 
   <script src="assets/js/auth.js"></script>
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      document.getElementById('login-btn').addEventListener('click', () => auth.login());
-      document.getElementById('pin-input').addEventListener('keypress', e => {
-        if (e.key === 'Enter') auth.login();
-      });
+    // Theme aus localStorage laden oder dark als default
+    const savedTheme = localStorage.getItem('theme') || 'dark';
+    document.documentElement.setAttribute('data-theme', savedTheme);
+
+    function toggleTheme() {
+      const current = document.documentElement.getAttribute('data-theme');
+      const next = current === 'light' ? 'light' : 'dark';
+      document.documentElement.setAttribute('data-theme', next);
+      localStorage.setItem('theme', next);
+    }
+
+    // Login-Logik
+    document.getElementById('login-btn').addEventListener('click', () => auth.login());
+    document.getElementById('pin-input').addEventListener('keypress', e => {
+      if (e.key === 'Enter') auth.login();
     });
   </script>
 </body>
