--- a/patient.html
+++ b/patient.html
@@ -10,17 +10,17 @@
 </head>
 <body>
 
-  <!-- DEIN THEME SWITCHER (oben rechts) -->
-  <div style="position:fixed;top:20px;right:20px;z-index:1000;">
-    <div class="theme-row" id="themeRow">
-      <div class="theme-points">
-        <span data-mode="auto">Auto</span>
-        <span data-mode="light">Hell</span>
-        <span data-mode="dark">Dunkel</span>
-        <div class="theme-marker" id="themeMarker"></div>
-      </div>
+<!-- THEME SWITCHER – oben rechts -->
+<div id="themeSwitcher">
+  <div class="theme-row">
+    <div class="theme-points">
+      <span data-mode="auto">Auto</span>
+      <span data-mode="light">Hell</span>
+      <span data-mode="dark">Dunkel</span>
+      <div class="theme-marker" id="themeMarker"></div>
     </div>
   </div>
+</div>
 
   <!-- Sidebar -->
   <nav class="sidebar">
