--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 <body class="login-body">
 
-  <!-- Seriöser Theme-Toggle -->
-  <!-- DEIN THEME SWITCHER -->
-   <div class="theme-row" id="themeRow">
-      <div class="theme-points">
-         <span data-mode="auto">Auto</span>
-         <span data-mode="light">Hell</span>
-         <span data-mode="dark">Dunkel</span>
-         <div class="theme-marker" id="themeMarker"></div>
-      </div>
-   </div>
+<!-- THEME SWITCHER – oben rechts -->
+<div id="themeSwitcher">
+  <div class="theme-row">
+    <div class="theme-points">
+      <span data-mode="auto">Auto</span>
+      <span data-mode="light">Hell</span>
+      <span data-mode="dark">Dunkel</span>
+      <div class="theme-marker" id="themeMarker"></div>
+    </div>
+  </div>
+</div>
 
   <div class="login-card">
     <div class="login-header">
