--- a/index.html
+++ b/index.html
@@ -1,51 +1,115 @@
 <!DOCTYPE html>
-<html lang="de" data-theme="dark">
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FamHealth Hub</title>
-  <link rel="stylesheet" href="assets/css/global.css">
-  <link rel="stylesheet" href="assets/css/login.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!----======== CSS ======== -->
+    <link rel="stylesheet" href="style.css">
+
+    <!----======== Boxicons CSS ======== -->
+    <link href='https://cdn.boxicons.com/3.0.6/fonts/basic/boxicons.min.css' rel='stylesheet'>
+
+    <!----======== Title ======== -->
+    <title>Dashboard Sidebar Menu | Dark- and Light-Mode</title>
+
 </head>
-<body class="login-body">
+<body>
+    <nav class="sidebar">
+        <header>
+            <div class="image-text">
+                <span class="image">
+                    <img src="logo.png" alt="logo">
+                </span>
 
-<!-- THEME SWITCHER – oben rechts -->
-<div id="themeSwitcher">
-  <div class="theme-row">
-    <div class="theme-points">
-      <span data-mode="auto">Auto</span>
-      <span data-mode="light">Hell</span>
-      <span data-mode="dark">Dunkel</span>
-      <div class="theme-marker" id="themeMarker"></div>
-    </div>
-  </div>
-</div>
+                <div class="text header-text">
+                    <span class="name">FamHealth Hub</span>
+                    <span class="profession">Praxissoftware</span>
+                </div>
+            </div>
 
-  <div class="login-card">
-    <div class="login-header">
-      FamHealth Hub
-    </div>
-    <div class="login-content">
-      <h2>Anmeldung</h2>
-      <p style="text-align:center; color:var(--text-muted); margin-bottom:2rem;">
-        Internes Arztcockpit · PIN erforderlich
-      </p>
+            <i class='bx  bx-chevron-right toggle'></i>
+        </header>
 
-      <div class="pin-wrapper">
-        <input type="password" class="pin-digit" maxlength="1" inputmode="numeric">
-        <input type="password" class="pin-digit" maxlength="1" inputmode="numeric">
-        <input type="password" class="pin-digit" maxlength="1" inputmode="numeric">
-        <input type="password" class="pin-digit" maxlength="1" inputmode="numeric">
-        <input type="password" class="pin-digit" maxlength="1" inputmode="numeric">
-        <input type="password" class="pin-digit" maxlength="1" inputmode="numeric">
-      </div>
 
-      <button id="login-btn">Entsperren</button>
-      <p class="error" id="error-msg"></p>
-    </div>
-  </div>
+        <div class="menu-bar">
+            <div class="menu">
+                <li class="search-box">
+                            <i class='bx  bx-search icon' ></i>
+                            <input type="search" placeholder="Search...">
+                </li>
+                <ul class="menu-links">
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx  bx-home icon'></i>
+                            <span class="text nav-text">Dashboard</span>
+                        </a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx  bx-group icon'></i> 
+                            <span class="text nav-text">Patienten</span>
+                        </a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx  bx-calendar-alt icon'></i>
+                            <span class="text nav-text">Terminkalender</span>
+                        </a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx  bx-pulse icon'></i>
+                            <span class="text nav-text">Vitals & Monitoring</span>
+                        </a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx  bx-file-detail icon'></i>
+                            <span class="text nav-text">Docs & Rezepte</span>
+                        </a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx  bx-cog icon'></i>
+                            <span class="text nav-text">Einstellungen</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        
+            <div class="bottom-content">
+                <li class="">
+                    <a href="#">
+                        <i class='bx  bx-arrow-out-left-square-half icon'></i> 
+                        <span class="text nav-text">Logout</span>
+                    </a>
+                </li>
 
-  <script src="assets/js/auth.js"></script>
-  <script src="assets/js/theme.js"></script>
+                <li class="mode">
+                    <div class="moon-sun">
+                        <i class='bx  bx-moon icon moon'></i>
+                        <i class='bx  bx-sun icon sun'></i>
+                    </div>
+                    <span class="mode-text text">Dark Mode</span>
+
+                    <div class="toggle-switch">
+                        <span class="switch"></span>
+                    </div>
+                </li>
+            </div>
+        </div>
+    </nav>
+
+    <section class="home">
+        <div class="text">Dashboard</div>
+    </section>
+
+    <script src="script.js"></script>
+
+
+
 </body>
 </html>
