Korrektur: Script-Import

--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
         <div class="text">Dashboard</div>
     </section>
 
-    <script src="script.js"></script>
-
+    <script src="script-start.js"></script>
 
 
 </body>
