--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
     <!----======== Boxicons CSS ======== -->
     <link href='https://cdn.boxicons.com/3.0.6/fonts/basic/boxicons.min.css' rel='stylesheet'>
 
+    <link rel="apple-touch-icon" sizes="57x57" href="bilder/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href ="bilder/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href ="bilder/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href ="bilder/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href ="bilder/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href ="bilder/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href ="bilder/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href ="bilder/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href ="bilder/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href ="bilder/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href ="bilder/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href ="bilder/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href ="bilder/favicon-16x16.png">
+    <link rel="shortcut icon" type="image/x-icon" sizes="32x32" href ="bilder/favicon-32x32.ico">
+    <link rel="shortcut icon" type="image/x-icon" sizes="96x96" href ="bilder/favicon-96x96.ico">
+    <link rel="shortcut icon" type="image/x-icon" sizes="16x16" href ="bilder/favicon-16x16.ico">
+    <link rel="manifest" href ="bilder/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content ="bilder/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-square70x70logo" content="bilder/ms-icon-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="bilder/ms-icon-150x150.png" />
+    <meta name="msapplication-square310x310logo" content="bilder/ms-icon-310x310.png" />
     <!----======== Title ======== -->
     <title>Dashboard Sidebar Menu | Dark- and Light-Mode</title>
 
