Neue Seite, Style-Verbesserungen und Bugfixes

--- a/index.html
+++ b/index.html
@@ -64,38 +64,38 @@
                             <input type="search" placeholder="Search...">
                 </li>
                 <ul class="menu-links">
-                    <li class="nav-link">
-                        <a href="#">
+                    <li class="nav-link active">
+                        <a href="index.html">
                             <i class='bx  bx-home icon'></i>
                             <span class="text nav-text">Dashboard</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="patienten.html">
                             <i class='bx  bx-group icon'></i> 
                             <span class="text nav-text">Patienten</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="termine.html">
                             <i class='bx  bx-calendar-alt icon'></i>
                             <span class="text nav-text">Terminkalender</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="vitals.html">
                             <i class='bx  bx-pulse icon'></i>
                             <span class="text nav-text">Vitals & Monitoring</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="docs-rezepte.html">
                             <i class='bx  bx-file-detail icon'></i>
                             <span class="text nav-text">Docs & Rezepte</span>
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="#">
+                        <a href="einstellungen.html">
                             <i class='bx  bx-cog icon'></i>
                             <span class="text nav-text">Einstellungen</span>
                         </a>
@@ -105,7 +105,7 @@
         
             <div class="bottom-content">
                 <li class="">
-                    <a href="#">
+                    <a href="login.html">
                         <i class='bx  bx-arrow-out-left-square-half icon'></i> 
                         <span class="text nav-text">Logout</span>
                     </a>
